maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:3: error: illegal start of statement
while (!isOverBaggle()) {v=random3(); match 
                                      ^